creusot/tests/should_fail/prusti/blocked_lifetime/curr_lifetime.stderr
error[creusot]: 'post region must not be blocked
 --> curr_lifetime.rs:5:4
  |
5 | fn simple<'post>(x: &'post mut u32) -> &'post mut u32 {
  |    ^^^^^^

error: aborting due to previous error

